plugins {
    id 'java-library'
}

group = 'com.mite'
version = '0.1.0-alpha'

repositories {
    mavenCentral()
}

dependencies {
    // Source: https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-autoconfigure
    compileOnly("org.springframework.boot:spring-boot-autoconfigure:4.1.0")
    // Source: https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
    compileOnly("org.springframework.boot:spring-boot-starter:4.1.0")



    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:4.1.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'

}

apply plugin: 'maven-publish'

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = 'com.mite'
            artifactId = 'semi-mite-spring-boot-starter'
            version = '0.1.0-alpha'
        }
    }
}